--- a/实验课/穿搭速递/style05.css
+++ b/实验课/穿搭速递/style05.css
@@ -16,9 +16,9 @@ a:link, a:visited {
     font-size: 16px;
 }
 
-#headerd {
+#header {
     width: 100%;
-    height: 12px;
+    height: 128px;
     background: url("head_bg.jpg") repeat-x;
     border-bottom: 3px solid #d5d5d5;
 }
@@ -45,9 +45,9 @@ li a:hover {
 }
 
 #content {
-    width: 980px;
-    margin: 0 auto;
-}
+     width: 980px;
+     margin: 0 auto;
+ }
 
 .style_bg {
     width: 908px;
@@ -169,7 +169,6 @@ h2 {
     background: #fff;
     border: 1px solid #dcd2ba;
     padding: 13px 0 0 20px;
-
 }
 
 .current dl {
@@ -220,12 +219,6 @@ h2 {
 
 .match_4 {
     background: url("match04.jpg") center center no-repeat;
-}
-
-.current a {
-    display: inline-block;
-    width: 180px;
-    height: 38px;
 }
 
 #footer {
