--- a/实验课/家居网/家居网style.css
+++ b/实验课/家居网/家居网style.css
@@ -4,15 +4,14 @@
 }
 
 body {
-    background: #404042;
     font-family: "微软雅黑";
     font-size: 16px;
 }
 
 #header {
-    margin: 0 auto;
     width: 980px;
     height: 110px;
+    margin: 0 auto;
     position: relative;
     background: white;
 }
@@ -28,32 +27,141 @@ body {
     position: absolute;
     right: 100px;
     top: 40px;
-    font-size: 16px;
 }
 
 #guide {
     width: 100%;
-    height: 130px;
-}
-
-.nav {
-    width: 980px;
+    background-color: black;
     margin: 0 auto;
-    color: white;
 }
 
 li {
+    text-align: center;
+    color: white;
+    list-style: none;
+}
+
+
+.nav ul {
+    width: 980px;
+    height: 40px;
+    margin: 0 auto;
+}
+
+.nav ul .one {
+    width: 196px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    display: block;
     float: left;
 }
 
-li a {
-    display: inline-block;
-    height: 91px;
-    width: 119px;
-    text-align: center;
-    line-height: 70px;
+li:hover {
+    color: white;
+    background-color: red;
 }
 
-li a:hover {
-    color: red;
+#banner {
+    width: 100%;
+    text-align: center;
+}
+
+.content1 {
+    width: 980px;
+    margin: 0 auto;
+}
+
+.content1 .pic {
+    height: 150px;
+    margin: 0 auto;
+    padding: 5px;
+}
+
+.content1 .pic div {
+    border: 1px solid #CCCCCC;
+    float: left;
+    width: 237px;
+    height: 100px;
+}
+
+.content1 .pic .p {
+    text-align: center;
+}
+
+.content1 .pic div img {
+    float: left;
+    margin-top: 25px;
+}
+
+.content1 .pic div .p1 {
+    font-weight: bolder;
+    margin-top: 25px;
+}
+
+.content1 .pic div .p2 {
+    color: #CCCCCC;
+    font-size: 6px;
+}
+
+.content2 {
+    width: 980px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.content2 p {
+    font-size: 18px;
+    font-weight: bolder;
+}
+
+.content2 div {
+    float: left;
+    margin: 10px auto;
+    padding: 5px;
+}
+
+.content3 {
+    width: 980px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.content3 p {
+    font-size: 18px;
+    font-weight: bolder;
+    margin: 10px;
+}
+
+.content3 .o1 {
+    width: 300px;
+    border: 1px solid #CCCCCC;
+    margin: 10px;
+    float: left;
+    height: 400px;
+}
+
+.content3 .o1 .P1 img {
+    float: left;
+}
+
+.content3 .o1 .P1 {
+    height: 120px;
+    padding-left: 5px;
+}
+
+.content3 .o1 .P1 .p5 {
+    font-size: 5px;
+    color: #CCCCCC;
+}
+
+#footer {
+    height: 100px;
+    background-color: #000000;
+}
+
+#footer p {
+    color: white;
+    text-align: center;
+    line-height: 50px;
 }
