--- a/实验课/穿搭速递/style05.css
+++ b/实验课/穿搭速递/style05.css
@@ -198,7 +198,7 @@ h2 {
 .current02 {
     width: 140px;
     height: 38px;
-    background: #f3734e url("gouwu.jpg") left center no-repeat;
+    background: #f3734e url("../../课程设计/images/gouwu.jpg") left center no-repeat;
     margin: 0 14px;
     line-height: 38px;
     padding-left: 60px;
